Time: 49 ms (5.06%), Space: 64.7 MB (37.97%) - LeetHub